# thalo

./: .gitignore
thalo-eventstoredb/: Cargo.toml
thalo-eventstoredb/src/: event_store.rs
thalo-postgres/src/: event_store.rs
thalo-sql/: Cargo.toml
thalo-sql/src/: bin.rs  error.rs  event_store.rs  lib.rs
thalo-sql/src/entity/: event.rs
thalo-sql/src/migration/: m_create_events_table.rs  mod.rs
thalo-sqlx/: Cargo.toml
thalo-sqlx/src/: bin.rs  event_store.rs  event_store_sea_orm.rs  lib.rs
thalo-sqlx/src/queries/: load_events.sql
thalo/src/: event_store.rs
