[package]
name = "thalo-eventstoredb"
version = "0.5.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "EventStore DB support for Thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
async-trait = "0.1"
eventstore = "1.0"
serde = "1.0"
thalo = { version = "0.5.0", path = "../thalo", features = ["event-store"] }
