[package]
name = "thalo-sqlx"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/thalo-rs/thalo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
sqlx = { version = "0.5", features = [ "all", "runtime-tokio-rustls" ] }
thalo = { version = "0.5.0", path = "../thalo", features = [
  "event-store",
  "tests-cfg",
] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.19"
